Changes test db name

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ addons:
       - tcl8.5
 
 before_script:
-  - psql -c 'create database postgres;' -U postgres
+  - psql -c 'create database default;' -U postgres
   - git clone https://github.com/antirez/disque.git disque_server
   - "cd disque_server/src && make && PREFIX=../ make install && cd -"
   - "./disque_server/bin/disque-server &"
