--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,12 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
-
 arrow==0.8.0
 blessed==1.14.1
-boto3==1.3.1
-botocore==1.4.36          # via boto3
+boto3==1.4.0
+botocore==1.4.46          # via boto3, s3transfer
 django-picklefield==0.3.2
-django-redis==4.4.3
+django-redis==4.4.4
 docutils==0.12            # via botocore
 future==0.15.2
 hiredis==0.2.0
@@ -19,10 +18,11 @@ iron-mq==0.9
 jmespath==0.9.0           # via boto3, botocore
 psutil==4.3.0
 psycopg2==2.6.2
-pymongo==3.2.2
+pymongo==3.3.0
 python-dateutil==2.5.3    # via arrow, botocore, iron-core
 redis==2.10.5
-requests==2.10.0          # via iron-core, rollbar
-rollbar==0.13.2
+requests==2.11.0          # via iron-core, rollbar
+rollbar==0.13.3
+s3transfer==0.1.1         # via boto3
 six==1.10.0               # via blessed, python-dateutil, rollbar
 wcwidth==0.1.7            # via blessed
